refactor:[#3] InterviewSession 코드 정리 (#4)